// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";
import "pusGroundModel/PusElement.proto";
import "pusGroundModel/Pus144OnboardFiles.proto";

package pusGroundModel.protobuf;

message Pus144Model {
extensions 6 to 106;

  repeated pusGroundModel.protobuf.Pus144OnboardFiles pus144OnboardFiles = 1;
  optional ccsds_mal.protobuf.TIME groundDate = 2;
  optional ccsds_mal.protobuf.UINTEGER apid = 3;
  optional ccsds_mal.protobuf.UINTEGER noOfOnBoardFiles = 4;
  optional pusGroundModel.protobuf.PusElement pusElement = 5;
}
